After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 676000 - Don't leak AlbumDetails::artist_id
Don't leak AlbumDetails::artist_id
Status: RESOLVED FIXED
Product: sound-juicer
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Sound Juicer Maintainers
Sound Juicer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-05-13 23:09 UTC by Christophe Fergeau
Modified: 2012-05-14 14:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't leak AlbumDetails::artist_id (825 bytes, patch)
2012-05-13 23:09 UTC, Christophe Fergeau
committed Details | Review

Description Christophe Fergeau 2012-05-13 23:09:11 UTC
This field is never freed in album_details_free which causes a memory leak to be
reported by valgrind
Comment 1 Christophe Fergeau 2012-05-13 23:09:13 UTC
Created attachment 213973 [details] [review]
Don't leak AlbumDetails::artist_id
Comment 2 Ross Burton 2012-05-14 08:23:45 UTC
Review of attachment 213973 [details] [review]:

Looks good.
Comment 3 Christophe Fergeau 2012-05-14 14:07:44 UTC
Attachment 213973 [details] pushed as 1633cde - Don't leak AlbumDetails::artist_id