Don't leak AlbumDetails::artist_id

https://bugzilla.gnome.org/show_bug.cgi?id=676000